navidrome/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
        - name: navidrome
          image: deluan/navidrome:latest
          ports:
            - containerPort: 4533
          volumeMounts:
            - name: data
              mountPath: /data
            - name: music
              mountPath: /music
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pvc-navidrome-data
        - name: music
          persistentVolumeClaim:
            claimName: pvc-navidrome-music
