navidrome/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: test.morgan-coulm.fr
    http:
      paths:
      - path: /navidrome
        pathType: Prefix
        backend:
          service:
            name: navidrome-service
            port:
              number: 80
